# RayTracing

./: .gitignore  CMakeLists.txt  README.md
apps/: 01_gradient.cpp  02_gradient_vec.cpp  CMakeLists.txt  rayTracer.cpp
include/LibRT/: Camera.h  HitableObject.h  Ray.h  Utils.h  Vec3.h
lib/: CMakeLists.txt  Equations.cpp  HitableObject.cpp  Utils.cpp  Vec3.h
lib/include/Core/: Camera.h  Image.h  Random.h  Ray.h  Scene.h  SmallBaseClasses.h  Vec3.h
lib/include/Materials/: Diffusive.h  Material.h  Metal.h  Reflective.h  Transparent.h
lib/include/Objects/: HitableCollection.h  HitableObject.h  Scene.h  Sphere.h
lib/include/Utils/: ProgressBar.h  Timer.h  UtilityEnums.h
lib/source/Core/: Camera.cpp  Image.cpp  QuadraticEquation.cpp  Random.cpp  Scene.cpp
lib/source/Materials/: Diffusive.cpp  Metal.cpp  Reflective.cpp  Transparent.cpp
lib/source/Objects/: HitableCollection.cpp  HitableObject.cpp  Scene.cpp  Sphere.cpp
lib/source/Utils/: ProgressBar.cpp
tests/: CMakeLists.txt  CameraTests.cpp  EquationsTests.cpp  HitableObjectTests.cpp  RayTests.cpp  TestsUtils.h  UtilsTests.cpp  Vec3Tests.cpp  catch_utils.hpp
tests/Core/: CameraTests.cpp  HitRecordTests.cpp  ImageTests.cpp  IntervalTests.cpp  QuadraticEquationTests.cpp  RandomTests.cpp  RayTests.cpp  SceneTests.cpp  Vec3Tests.cpp
tests/Materials/: DiffusiveTests.cpp  MetalTests.cpp  ReflectiveTests.cpp  TransparentTests.cpp
tests/Objects/: HitableCollectionTests.cpp  HitableObjectTests.cpp  SceneTests.cpp  SphereTests.cpp
tests/Utils/: ProgressBarTests.cpp
tools/: addClass.py
